--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
